# ccis-dashboard

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  pyproject.toml  requirements.txt  setup.sh
.claude/: launch.json
.streamlit/: config.toml
data/classified/: classificados_deploy.json
data/reference/: empresas_industriais.txt
docs/: ULTRAPLAN_v2.docx
scripts/: autorizar_ml.py  classificar_ml.py  coletar_ml.py  download_spacy_model.py  prepare_deploy.py  processar_artesanais_consumidor_gov.py  processar_todos_cosmeticos.py  run_dashboard.py  run_pipeline.py  test_dou.py  test_notivisa.py
src/anonymization/: anonymizer.py  audit_log.py  ner_detector.py  regex_patterns.py
src/classification/: batch_classifier.py  direct_classifier.py  efficient_classifier.py  prompts.py  schemas.py
src/config/: settings.py
src/dashboard/: app.py
src/dashboard/components/: data_loader.py  detail_renderer.py  styles.py
src/dashboard/pages/: 1_Analise_Empresas.py  2_Alertas.py  3_Busca.py
src/ingestion/: base.py  consumidor_gov.py  dou.py  mercadolivre.py  notivisa.py
src/prefilter/: risk_keywords.py
