[project]
name = "ccis"
version = "0.1.0"
description = "Cosmetic Complaint Intelligence System — Monitoramento de reclamações sobre cosméticos artesanais"
requires-python = ">=3.11"
dependencies = [
    # HTTP & APIs
    "httpx>=0.27",
    "requests>=2.31",
    # NLP & ML
    "spacy>=3.7",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.4",
    "hdbscan>=0.8",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",
    "alembic>=1.13",
    # Claude API
    "anthropic>=0.40",
    # Validation
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    # Dashboard
    "streamlit>=1.30",
    "plotly>=5.18",
    # Utilities
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
airflow = [
    "apache-airflow>=2.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
